--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
   </head>
   <body>
     <header id="header" class="header">
-      <div class="logo">
-        <a href="index.html"><img src="images/logoipsum-317.svg" alt="logo" /></a>
+      <div id="logo" class="logo">
+        <a href="index.html"><img src="images/loqo.svg" alt="logo" /></a>
       </div>
-      <button class="circle-icon"><i class="fa fa-shopping-basket icon" aria-hidden="true"></i></button>
+      <button id="cart-button" class="circle-icon"><i class="fa fa-shopping-basket icon" aria-hidden="true"></i></button>
     </header>
 
     <main class="page-container">
-      <div id="categories" class="categories"></div>
-
-      <div class="tootevalik">
+      <div id="product-list-container" class="tootevalik">
         <h2>Browse our products</h2>
+        <div id="categories" class="categories"></div>
         <div id="product-list" class="product-list"></div>
       </div>
 
-      <div class="ostukorv">
+      <div id="product-page"></div>
+
+      <div id="cart-container" class="ostukorv" style="display: none">
         <h2>Shopping cart</h2>
         <div id="cart-items" class="cart-items"></div>
         <button id="empty-cart" class="secondary-btn">Empty cart</button>
