fix 3 views showing and input fields, all good for now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="header" class="header">
       <div id="logo" class="logo">
-        <a href="index.html"><img src="images/loqo.svg" alt="logo" /></a>
+        <img src="images/loqo.svg" alt="logo" />
       </div>
       <button id="cart-button" class="circle-icon"><i class="fa fa-shopping-basket icon" aria-hidden="true"></i></button>
     </header>
